# OptNet

./: README.md
GA/: CMakeLists.txt  Fitness.cpp  Fitness.h  GA.cpp  GA.h  Graph.h  GraphLoader.cpp  GraphLoader.h  Individual.h  JsonExporter.cpp  JsonExporter.h  PathUtils.cpp  PathUtils.h  main.cpp
GraphGenerator/: CMakeLists.txt  Edge.h  Graph.h  GraphGenerator.cpp  GraphGenerator.h  JsonExporter.cpp  JsonExporter.h  NetworkData.h  Node.h  main.cpp
results/: best_path.json  input_graph.json
web/: index.html  main.js
